exports[`no-process-chdir-in-test > invalid(1): import test from 'node:test';\ntest('changes directory', t => {\n\tprocess.chdir('fixtures');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('changes directory', t => {
  3 | 	process.chdir('fixtures');
  4 | });

`;

exports[`no-process-chdir-in-test > invalid(1): import test from 'node:test';\ntest('changes directory', t => {\n\tprocess.chdir('fixtures');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('changes directory', t => {
> 3 | 	process.chdir('fixtures');
    | 	^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.
  4 | });

`;

exports[`no-process-chdir-in-test > invalid(10): import test from 'node:test';\ntest('parent', async t => {\n\tawait t.test('changes directory', () => {\n\t\tprocess.chdir('fixtures');\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => {
  3 | 	await t.test('changes directory', () => {
  4 | 		process.chdir('fixtures');
  5 | 	});
  6 | });

`;

exports[`no-process-chdir-in-test > invalid(10): import test from 'node:test';\ntest('parent', async t => {\n\tawait t.test('changes directory', () => {\n\t\tprocess.chdir('fixtures');\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('parent', async t => {
  3 | 	await t.test('changes directory', () => {
> 4 | 		process.chdir('fixtures');
    | 		^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.
  5 | 	});
  6 | });

`;

exports[`no-process-chdir-in-test > invalid(11): import test from 'node:test';\ntest('parent', async t => {\n\tawait t.test.only('changes directory', () => {\n\t\tprocess.chdir('fixtures');\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => {
  3 | 	await t.test.only('changes directory', () => {
  4 | 		process.chdir('fixtures');
  5 | 	});
  6 | });

`;

exports[`no-process-chdir-in-test > invalid(11): import test from 'node:test';\ntest('parent', async t => {\n\tawait t.test.only('changes directory', () => {\n\t\tprocess.chdir('fixtures');\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('parent', async t => {
  3 | 	await t.test.only('changes directory', () => {
> 4 | 		process.chdir('fixtures');
    | 		^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.
  5 | 	});
  6 | });

`;

exports[`no-process-chdir-in-test > invalid(12): import test from 'node:test';\ntest('changes directory', t => {\n\tprocess?.chdir('fixtures');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('changes directory', t => {
  3 | 	process?.chdir('fixtures');
  4 | });

`;

exports[`no-process-chdir-in-test > invalid(12): import test from 'node:test';\ntest('changes directory', t => {\n\tprocess?.chdir('fixtures');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('changes directory', t => {
> 3 | 	process?.chdir('fixtures');
    | 	^^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.
  4 | });

`;

exports[`no-process-chdir-in-test > invalid(13): import test from 'node:test';\ntest('changes directory', t => {\n\tprocess.chdir?.('fixtures');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('changes directory', t => {
  3 | 	process.chdir?.('fixtures');
  4 | });

`;

exports[`no-process-chdir-in-test > invalid(13): import test from 'node:test';\ntest('changes directory', t => {\n\tprocess.chdir?.('fixtures');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('changes directory', t => {
> 3 | 	process.chdir?.('fixtures');
    | 	^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.
  4 | });

`;

exports[`no-process-chdir-in-test > invalid(14): import test from 'node:test';\ntest('changes directory', t => {\n\t(process as NodeJS.Process).chdir('fixtures');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('changes directory', t => {
  3 | 	(process as NodeJS.Process).chdir('fixtures');
  4 | });

`;

exports[`no-process-chdir-in-test > invalid(14): import test from 'node:test';\ntest('changes directory', t => {\n\t(process as NodeJS.Process).chdir('fixtures');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('changes directory', t => {
> 3 | 	(process as NodeJS.Process).chdir('fixtures');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.
  4 | });

`;

exports[`no-process-chdir-in-test > invalid(15): import test from 'node:test';\ntest('changes directory', t => {\n\t(process.chdir as typeof process.chdir)('fixtures');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('changes directory', t => {
  3 | 	(process.chdir as typeof process.chdir)('fixtures');
  4 | });

`;

exports[`no-process-chdir-in-test > invalid(15): import test from 'node:test';\ntest('changes directory', t => {\n\t(process.chdir as typeof process.chdir)('fixtures');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('changes directory', t => {
> 3 | 	(process.chdir as typeof process.chdir)('fixtures');
    | 	 ^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.
  4 | });

`;

exports[`no-process-chdir-in-test > invalid(2): import {it} from 'node:test';\nit('changes directory', () => { process.chdir('fixtures'); }); 1`] = `

  1 | import {it} from 'node:test';
  2 | it('changes directory', () => { process.chdir('fixtures'); });

`;

exports[`no-process-chdir-in-test > invalid(2): import {it} from 'node:test';\nit('changes directory', () => { process.chdir('fixtures'); }); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it('changes directory', () => { process.chdir('fixtures'); });
    |                                 ^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.

`;

exports[`no-process-chdir-in-test > invalid(3): import * as nodeTest from 'node:test';\nnodeTest.test('changes directory', () => { process.chdir('fixtures'); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('changes directory', () => { process.chdir('fixtures'); });

`;

exports[`no-process-chdir-in-test > invalid(3): import * as nodeTest from 'node:test';\nnodeTest.test('changes directory', () => { process.chdir('fixtures'); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test('changes directory', () => { process.chdir('fixtures'); });
    |                                            ^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.

`;

exports[`no-process-chdir-in-test > invalid(4): import test from 'node:test';\ntest.only('changes directory', () => { process.chdir('fixtures'); }); 1`] = `

  1 | import test from 'node:test';
  2 | test.only('changes directory', () => { process.chdir('fixtures'); });

`;

exports[`no-process-chdir-in-test > invalid(4): import test from 'node:test';\ntest.only('changes directory', () => { process.chdir('fixtures'); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.only('changes directory', () => { process.chdir('fixtures'); });
    |                                        ^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.

`;

exports[`no-process-chdir-in-test > invalid(5): import process from 'node:process';\nimport test from 'node:test';\ntest('changes directory', () => { process.chdir('fixtures'); }); 1`] = `

  1 | import process from 'node:process';
  2 | import test from 'node:test';
  3 | test('changes directory', () => { process.chdir('fixtures'); });

`;

exports[`no-process-chdir-in-test > invalid(5): import process from 'node:process';\nimport test from 'node:test';\ntest('changes directory', () => { process.chdir('fixtures'); }); 2`] = `

Message:
  1 | import process from 'node:process';
  2 | import test from 'node:test';
> 3 | test('changes directory', () => { process.chdir('fixtures'); });
    |                                   ^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.

`;

exports[`no-process-chdir-in-test > invalid(6): import * as nodeProcess from 'process';\nimport test from 'node:test';\ntest('changes directory', () => { nodeProcess.chdir('fixtures'); }); 1`] = `

  1 | import * as nodeProcess from 'process';
  2 | import test from 'node:test';
  3 | test('changes directory', () => { nodeProcess.chdir('fixtures'); });

`;

exports[`no-process-chdir-in-test > invalid(6): import * as nodeProcess from 'process';\nimport test from 'node:test';\ntest('changes directory', () => { nodeProcess.chdir('fixtures'); }); 2`] = `

Message:
  1 | import * as nodeProcess from 'process';
  2 | import test from 'node:test';
> 3 | test('changes directory', () => { nodeProcess.chdir('fixtures'); });
    |                                   ^^^^^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.

`;

exports[`no-process-chdir-in-test > invalid(7): import {default as nodeProcess} from 'node:process';\nimport test from 'node:test';\ntest('changes directory', () => { nodeProcess.chdir('fixtures'); }); 1`] = `

  1 | import {default as nodeProcess} from 'node:process';
  2 | import test from 'node:test';
  3 | test('changes directory', () => { nodeProcess.chdir('fixtures'); });

`;

exports[`no-process-chdir-in-test > invalid(7): import {default as nodeProcess} from 'node:process';\nimport test from 'node:test';\ntest('changes directory', () => { nodeProcess.chdir('fixtures'); }); 2`] = `

Message:
  1 | import {default as nodeProcess} from 'node:process';
  2 | import test from 'node:test';
> 3 | test('changes directory', () => { nodeProcess.chdir('fixtures'); });
    |                                   ^^^^^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.

`;

exports[`no-process-chdir-in-test > invalid(8): import {chdir as changeDirectory} from 'node:process';\nimport test from 'node:test';\ntest('changes directory', () => { changeDirectory('fixtures'); }); 1`] = `

  1 | import {chdir as changeDirectory} from 'node:process';
  2 | import test from 'node:test';
  3 | test('changes directory', () => { changeDirectory('fixtures'); });

`;

exports[`no-process-chdir-in-test > invalid(8): import {chdir as changeDirectory} from 'node:process';\nimport test from 'node:test';\ntest('changes directory', () => { changeDirectory('fixtures'); }); 2`] = `

Message:
  1 | import {chdir as changeDirectory} from 'node:process';
  2 | import test from 'node:test';
> 3 | test('changes directory', () => { changeDirectory('fixtures'); });
    |                                   ^^^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.

`;

exports[`no-process-chdir-in-test > invalid(9): import {chdir as changeDirectory} from 'process';\nimport test from 'node:test';\ntest('changes directory', () => { changeDirectory('fixtures'); }); 1`] = `

  1 | import {chdir as changeDirectory} from 'process';
  2 | import test from 'node:test';
  3 | test('changes directory', () => { changeDirectory('fixtures'); });

`;

exports[`no-process-chdir-in-test > invalid(9): import {chdir as changeDirectory} from 'process';\nimport test from 'node:test';\ntest('changes directory', () => { changeDirectory('fixtures'); }); 2`] = `

Message:
  1 | import {chdir as changeDirectory} from 'process';
  2 | import test from 'node:test';
> 3 | test('changes directory', () => { changeDirectory('fixtures'); });
    |                                   ^^^^^^^^^^^^^^^ Do not call \`process.chdir()\` inside a test. Use absolute paths or a hook that restores the original directory.

`;
